--- a/app/src/main/res/layout/home_list.xml
+++ b/app/src/main/res/layout/home_list.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        android:src="@android:drawable/btn_star_big_on" />
 
     <TextView
         android:id="@+id/textView"
