--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
     android:orientation="vertical"
     android:gravity="center">
 
@@ -16,17 +15,21 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars"
-
+        android:src="@mipmap/crayjesuus"
+        android:gravity="center"
     android:layout_weight="1"/>
+<!--    android:gravity="center"-->
 <!--        tools:srcCompat="@tools:sample/avatars"-->
+    <!--            tools:srcCompat="@tools:sample/avatars"-->
 
 
     <TextView
         android:id="@+id/homeTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
-        android:text="TextView" />
+        android:text="TextView"
+    />
 </LinearLayout>
+
+<!--    android:layout_weight="1"-->
