--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_messages"
+        android:id="@+id/navigation_message_list"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_messages" />
 
