--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,15 +11,16 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/navigation_messages"
+        android:id="@+id/navigation_message_list"
         android:name="com.example.myapplication.ui.messageList.MessageListFragment"
 
-        android:label="eerr rr" tools:layout="@layout/fragment_hero_profile" />
+        android:label="eerr rr"         tools:layout="@layout/fragment_message_list"
+        />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.myapplication.ui.profiles.heroProfile.HeroProfileFragment"
         android:label="HeroProfileFragment"
-        tools:layout="@layout/fragment_message_list" />
+        tools:layout="@layout/fragment_hero_profile" />
 
 </navigation>
