--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-
-    android:orientation="vertical"
-    android:gravity="center">
+    android:layout_height="wrap_content">
+<!--    android:orientation="vertical"-->
+<!--    android:gravity="center">-->
 
     <!-- Include other widget or layout tags here. These are considered
             "child views" or "children" of the linear layout -->
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/crayjesuus"
+        android:id="@+id/home_image_view"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_weight="1"
+        android:contentDescription="profilepic"
         android:gravity="center"
-    android:layout_weight="1"/>
+        android:src="@mipmap/screenshot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 <!--    android:gravity="center"-->
 <!--        tools:srcCompat="@tools:sample/avatars"-->
     <!--            tools:srcCompat="@tools:sample/avatars"-->
@@ -25,11 +28,16 @@
 
     <TextView
         android:id="@+id/homeTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="194dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="TextView"
-    />
-</LinearLayout>
+        android:textSize="25sp"
 
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_image_view"
+        app:layout_constraintVertical_bias="1.0" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 <!--    android:layout_weight="1"-->
